# cfarmhash

./: Makefile.am  NEWS  README.md  configure.ac
man/: cfarmhash.3
test/: test_cfarmhash.c  test_coverage.sh
